--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <body>
         <div class="buttons">
             <a href="index.html" class="btn btn-bir">Sinh nhật</a>
-            <a href="timeline.html" class="btn btn-timeline" style="display: none;">Dòng thời gian</a>
+            <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
             <a href="gallery.html" class="btn btn-gallery">Ảnh kĩ niệm</a>
         </div>
 
@@ -118,10 +118,52 @@
             <div class="gallery-item">
                 <div class="content"><img src="./img/pic33.jpg" alt="" /></div>
             </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic34.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic35.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic36.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic37.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic38.jpeg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic39.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic40.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic41.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic42.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic43.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic44.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic45.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic46.jpg" alt="" /></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="./img/pic47.jpg" alt="" /></div>
+            </div>
         </div>
         <!-- Phần nhạc -->
         <audio id="player" autoplay loop>
-            <source src="./music/music.mp3" type="audio/mp3" />
+        <source src="./music/music.mp3" type="audio/mp3" />
         </audio>
     </body>
 
