--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="buttons">
             <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
             <a href="index.html" class="btn btn-bir">Sinh nhật</a>
-            <a href="timeline.html" class="btn btn-timeline" style="display: none;">Dòng thời gian</a>
+            <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
             <a href="gallery.html" class="btn btn-gallery">Ảnh kĩ niệm</a>
         </div>
 
@@ -22,7 +22,7 @@
 
         <!-- 3. Phần nhạc -->
         <audio id="player" autoplay loop>
-            <source src="./music/music.mp3" type="audio/mp3" />
+        <source src="./music/music.mp3" type="audio/mp3" />
         </audio>
     </body>
 </html>
