--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/png" href="./img/CILKGax.png" />
-        <!-- 1. Tiêu đề của file index -->
-        <title>Happy birthday</title>
-        <link rel="stylesheet" href="./css/style.css" />
-    </head>
-    <body class="page__main">
-        <div class="buttons">
-            <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
-            <a href="index.html" class="btn btn-bir">Sinh nhật</a>
-            <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
-            <a href="gallery.html" class="btn btn-gallery">Ảnh kĩ niệm</a>
-        </div>
 
-        <!-- 2. Phần ảnh của người bạn mún chúc -->
-        <img src="./img/322.jpg" alt="" class="cover" />
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./img/CILKGax.png" />
+    <!-- 1. Tiêu đề của file index -->
+    <title>Happy birthday</title>
+    <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-        <!-- 3. Phần nhạc -->
-        <audio id="player" autoplay loop>
-        <source src="./music/music.mp3" type="audio/mp3" />
-        </audio>
-    </body>
+<body class="page__main">
+    <div class="buttons">
+        <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
+        <a href="index.html" class="btn btn-bir">Sinh nhật</a>
+        <a href="timeline.html" class="btn btn-timeline">Bất Ngờ</a>
+        <a href="gallery.html" class="btn btn-gallery">Dòng Thời gian</a>
+    </div>
+
+    <!-- 2. Phần ảnh của người bạn mún chúc -->
+    <img src="./img/322.jpg" alt="" class="cover" />
+
+    <!-- 3. Phần nhạc -->
+    <audio id="player" autoplay loop>
+        <source src="./music/hpbd.MP3" type="audio/mp3" />
+    </audio>
+    <script>
+        const player = document.getElementById("player");
+        // Khi trang được tải
+        window.onload = function () {
+            // Lấy trạng thái nhạc từ LocalStorage
+            const savedTime = localStorage.getItem("audioTime");
+            if (savedTime) {
+                player.currentTime = parseFloat(savedTime);
+            }
+            player.play();
+        };
+        // Lưu thời gian hiện tại của nhạc vào LocalStorage khi người dùng rời khỏi trang
+        window.onbeforeunload = function () {
+            localStorage.setItem("audioTime", player.currentTime);
+        };
+    </script>
+</body>
+
 </html>
