--- a/gallery.html
+++ b/gallery.html
@@ -162,6 +162,13 @@
         <div class="gallery-item">
             <div class="content"><img src="./img/pic47.jpg" alt="" /></div>
         </div>
+        <div class="gallery-item">
+            <div class="content"><img src="./img/321.jpg" alt="" /></div>
+        </div>
+        <div class="gallery-item">
+            <div class="content"><img src="./img/322.jpg" alt="" /></div>
+        </div>
+        <span class="say"><span class="space"></span> -- ♥️♥️ 사랑해요 ♥️♥️ --</span>
     </div>
     <!-- Phần nhạc -->
     <audio id="player" autoplay loop>
