--- a/timeline.html
+++ b/timeline.html
@@ -37,9 +37,8 @@
                         <span class="say">Chúc mừng sinh nhật người con gái đẹp nhất hôm nay</span><br>
                         <span class="say">Phương có biết hôm nay là ngày gì không ?</span><br>
                         <span class="say"> </span><br>
-                        <span class="say"> </span><br>
                         <span class="say">Hôm nay là một ngày đặc biệt, </span><br>
-                        <span class="say">Vì có một người rất đặc biệt được sinh ra! </span><br>
+                        <span class="say">Vì có một người rất đặc biệt được sinh ra! ♥️ </span><br>
                         <span class="say"> </span><br>
                         <span class="say">Chúc Phương luôn vui vẻ, hạnh phúc</span><br>
                         <span class="say">Gặp nhiều may mắn và ngày càng xinh đẹp.</span><br>
@@ -48,11 +47,10 @@
                         <span class="say">À… nếu có thêm một người luôn âm thầm quan tâm Phương</span><br>
                         <span class="say">Thì cũng đừng bất ngờ nhé! 😉</span><br>
                         <span class="say">Chúc Phương một sinh nhật thật ý nghĩa và tràn đầy niềm vui! 🎈✨</span><br>
-                        <span class="say">Yêu Phương cho đến khi nào anh không còn tồn tại <3 < /span><br>
-                                <span class="say">Hãy cứ tin Phương nhé.</span><br>
+                        <span class="say">♥️♥️♥️ <br>
                                 <span class="say">Chúc Phương sinh nhật vui vẽ.</span><br>
                                 <span class="say"> </span><br>
-                                <span class="say"><span class="space"></span> -- Anh yêu Phương --</span>
+                                <span class="say"><span class="space"></span> -- ♥️♥️ 我爱你 ♥️♥️ --</span>
                     </font>
                     </p>
                 </div>
