--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- 2. Phần ảnh của người bạn mún chúc -->
-    <img src="./img/322.jpg" alt="" class="cover" />
+    <img src="./img/pic45.jpg" alt="" class="cover" />
 
     <!-- 3. Phần nhạc -->
     <audio id="player" autoplay loop>
