--- a/timeline.html
+++ b/timeline.html
@@ -50,7 +50,7 @@
                         <span class="say">♥️♥️♥️ <br>
                                 <span class="say">Chúc Phương sinh nhật vui vẽ.</span><br>
                                 <span class="say"> </span><br>
-                                <span class="say"><span class="space"></span> -- ♥️♥️ 我爱你 ♥️♥️ --</span>
+                                <span class="say"><span class="space"></span> -- ♥️♥️♥️♥️ --</span>
                     </font>
                     </p>
                 </div>
